--- a/exercicios/ex22 - background/centralização vertical/fundo07.html
+++ b/exercicios/ex22 - background/centralização vertical/fundo07.html
@@ -8,7 +8,7 @@
     <style>
         #container {
             height: 95vh;
-            background-image: url(imagens/target001.png);
+            background-image: url(../imagens/target001.png);
             background-size: 100% 100%;
             position: relative;
             height: 500px;
@@ -16,7 +16,7 @@
             background-color: purple;
         }
         #conteudo{
-            background-image: url(imagens/target001.png);
+            background-image: url(../imagens/target001.png);
             background-size: 100% 100%;
             position: absolute;
             height: 200px;
