--- a/desafio 12/index.html
+++ b/desafio 12/index.html
@@ -25,7 +25,7 @@
     Vou dizer tudo em poesia.
 </section>
 
-<section class="imagem">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -47,7 +47,6 @@
         Se o saite é muito bom <br>
         Ele vale um alto preço.
     </p>
-    
     <p>
         Pra piorar a liguagem <br>
         O emoticom é um risco <br>
@@ -71,7 +70,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="img02">
     <p>
         Agora, escrevo e envio <br>
         Chegando na mesma hora <br>
@@ -81,17 +80,19 @@
         O mundo ficou cativo <br>
         Da tecnologia do agora.
     </p>
-    
-    <p>
-        Felizmente, pra orar <br>
-        Não precisa de internet <br>
-        Deus escuta todo mundo <br>
-        Se quiser, faça esse teste <br>
-        Dois pontos são dois joelhos <br>
-        Seus lábios são aparelhos <br>
-        Deixe que Deus interprete.
-    </p>
 </section>
+    <section class="normal">
+        <p>
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete.
+        </p>
+    </section>
+
 
 <footer>
     site criado por <a href="#">Marcelo</a>
