--- a/exercicios/ex23 - tabelas/tabela02.html
+++ b/exercicios/ex23 - tabelas/tabela02.html
@@ -7,7 +7,7 @@
     <title>Tabela grande</title>
     <style>
         table {
-            border-collapse: collapse;
+            border-collapse: collapse
             width: 400px;
             position: relative;
         }
