--- a/exercicios/ex19-pseudo classes/hover.html
+++ b/exercicios/ex19-pseudo classes/hover.html
@@ -26,6 +26,9 @@
     <div>Clique aqui
         <p>TEXTO ESCONDIDO</p>
     </div>
+    <div id="a">Clique aqui
+        <p>TEXTO ESCONDIDO</p>
+    </div>
     <p>Fim do exemplo</p>
     
 </body>
