--- a/exercicios/ex22 - background/fundo03.html
+++ b/exercicios/ex22 - background/fundo03.html
@@ -11,7 +11,7 @@
             border:1px solid;
             margin: 10px;
             border-radius: 10px;
-            background-image: url(exercicios/ex22/imagens/wallpaper003.jpg);
+            background-image: url(imagens/wallpaper003.jpg);
         }
         div#q1{
             background-position: left top;
