--- a/exercicios/ex22 - background/fundo05.html
+++ b/exercicios/ex22 - background/fundo05.html
@@ -8,7 +8,7 @@
    <style>
        body {
            height: 95vh;
-           background-image: url(exercicios/ex22/imagens/wallpaper003.jpg);
+           background-image: url(imagens/wallpaper003.jpg);
            background-position: left bottom;
        }
    </style>
