--- a/exercicios/ex23 - tabelas/Tabela.html
+++ b/exercicios/ex23 - tabelas/Tabela.html
@@ -97,7 +97,7 @@
     <table>
         <colgroup>
         <col class="e">
-        <col class="f" span="2"> <!--sapan para puxar 2 colunas-->
+        <col class="f" span="2"> <!--para puxar 2 colunas-->
         <col class="g">
        
     </colgroup>
